--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
+etc/
 build/
 develop-eggs/
 dist/
@@ -21,6 +22,8 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+bin/*
+src/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -52,3 +55,5 @@ docs/_build/
 
 # PyBuilder
 target/
+.mr.developer.cfg
+
