--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -17,7 +17,7 @@ openprocurement.complaints.queue = git https://github.com/imaginal/openprocureme
 [config-from-template]
 recipe = collective.recipe.template
 input = templates/${:_buildout_section_name_}
-output = etc/${:_buildout_section_name_}-dist
+output = etc/${:_buildout_section_name_}
 overwrite = False
 
 [mkdirs]
