--- a/templates/queue.ini
+++ b/templates/queue.ini
@@ -8,7 +8,7 @@ api_version = 0.12
 [mysql]
 host = 127.0.0.1
 user = complaints
-passwd = complains
+passwd = complaints
 db = complaints
 table = complaints
 
@@ -28,7 +28,7 @@ handlers = console
 [logger_openprocurement.complaints.queue]
 level = INFO
 handlers =
-qualname = openprocurement.search
+qualname = openprocurement.complaints.queue
 
 [logger_restkit.client]
 level = ERROR
