--- a/profiles/versions.cfg
+++ b/profiles/versions.cfg
@@ -1,1 +1,54 @@
 [versions]
+# Added by buildout at 2016-03-07 07:24:39.991644
+collective.recipe.template = 1.13
+greenlet = 0.4.9
+http-parser = 0.8.3
+mr.developer = 1.34
+six = 1.10.0
+socketpool = 0.5.3
+z3c.recipe.mkdir = 0.6
+zc.buildout = 2.5.0
+zc.recipe.egg = 2.0.3
+
+# Required by:
+# openprocurement.complaints.queue==0.1
+MySQL-python = 1.2.5
+
+# Required by:
+# openprocurement-client==1.0a3
+gevent = 1.0.2
+
+# Required by:
+# openprocurement-client==1.0a3
+# openprocurement.complaints.queue==0.1
+iso8601 = 0.1.11
+
+# Required by:
+# openprocurement-client==1.0a3
+munch = 2.0.4
+
+# Required by:
+# openprocurement.complaints.queue==0.1
+python-dateutil = 2.5.0
+
+# Required by:
+# openprocurement.complaints.queue==0.1
+requests = 2.9.1
+
+# Required by:
+# openprocurement-client==1.0a3
+restkit = 4.2.2
+
+# Required by:
+# openprocurement-client==1.0a3
+retrying = 1.3.3
+
+# Required by:
+# mr.developer==1.34
+# openprocurement.complaints.queue==0.1
+setuptools = 20.2.2
+
+# Required by:
+# openprocurement-client==1.0a3
+# openprocurement.complaints.queue==0.1
+simplejson = 3.8.2
