add bash angel script

--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -6,7 +6,8 @@ auto-checkout = *
 parts =
     mkdirs
     scripts
-	queue.ini
+	complaints_queue.ini
+	complaints_queue.sh
 show-picked-versions = true
 update-versions-file = profiles/versions.cfg
 
@@ -32,6 +33,11 @@ eggs =
     openprocurement_client
     openprocurement.complaints.queue
 
-[queue.ini]
+[complaints_queue.ini]
 <= config-from-template
 timezone = Europe/Kiev
+
+[complaints_queue.sh]
+<= config-from-template
+output = bin/${:_buildout_section_name_}
+mode = 755
