add init srcipt

--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -7,7 +7,8 @@ parts =
     mkdirs
     scripts
 	complaints_queue.ini
-	complaints_queue.sh
+	complaints_angel.sh
+	complaints_init.sh
 show-picked-versions = true
 update-versions-file = profiles/versions.cfg
 
@@ -20,6 +21,12 @@ recipe = collective.recipe.template
 input = templates/${:_buildout_section_name_}
 output = etc/${:_buildout_section_name_}
 overwrite = False
+
+[script-from-template]
+recipe = collective.recipe.template
+input = templates/${:_buildout_section_name_}
+output = bin/${:_buildout_section_name_}
+mode = 755
 
 [mkdirs]
 recipe = z3c.recipe.mkdir
@@ -35,9 +42,9 @@ eggs =
 
 [complaints_queue.ini]
 <= config-from-template
-timezone = Europe/Kiev
 
-[complaints_queue.sh]
-<= config-from-template
-output = bin/${:_buildout_section_name_}
-mode = 755
+[complaints_angel.sh]
+<= script-from-template
+
+[complaints_init.sh]
+<= script-from-template
