buildout with debian scripts

--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -3,35 +3,42 @@ extensions = mr.developer
 extends = versions.cfg
 package-name = openprocurement.complaints.queue
 auto-checkout = *
+etc-directory = ${buildout:directory}/etc
+var-directory = ${buildout:directory}/var
+run-directory = ${buildout:directory}/var/run
+log-directory = ${buildout:directory}/var/log
 parts =
     mkdirs
     scripts
-	complaints_queue.ini
-	complaints_angel.sh
-	complaints_init.sh
+	complaints.ini
 show-picked-versions = true
-update-versions-file = profiles/versions.cfg
+#update-versions-file = profiles/versions.cfg
+
 
 [sources]
-openprocurement_client = git https://github.com/openprocurement/openprocurement.client.python
 openprocurement.complaints.queue = git https://github.com/imaginal/openprocurement.complaints.queue
 
+
 [config-from-template]
-recipe = collective.recipe.template
+recipe = collective.recipe.genshi
 input = templates/${:_buildout_section_name_}
 output = etc/${:_buildout_section_name_}
 overwrite = False
+
 
 [script-from-template]
 recipe = collective.recipe.template
 input = templates/${:_buildout_section_name_}
 output = bin/${:_buildout_section_name_}
+overwrite = True
 mode = 755
+
 
 [mkdirs]
 recipe = z3c.recipe.mkdir
 paths =
     ${buildout:directory}/etc
+    ${buildout:directory}/var/run
     ${buildout:directory}/var/log
 
 [scripts]
@@ -39,12 +46,11 @@ recipe = zc.recipe.egg
 eggs =
     openprocurement_client
     openprocurement.complaints.queue
+find-links =
+    https://github.com/openprocurement/openprocurement.client.python/archive/1.0b3.zip#egg=openprocurement_client
 
-[complaints_queue.ini]
+
+[complaints.ini]
 <= config-from-template
+overwrite = False
 
-[complaints_angel.sh]
-<= script-from-template
-
-[complaints_init.sh]
-<= script-from-template
