--- a/profiles/versions.cfg
+++ b/profiles/versions.cfg
@@ -1,54 +1,45 @@
 [versions]
-# Added by buildout at 2016-03-07 07:24:39.991644
-collective.recipe.template = 1.13
-greenlet = 0.4.9
+Genshi = 0.7
+collective.recipe.genshi = 1.0
+greenlet = 0.4.10
 http-parser = 0.8.3
 mr.developer = 1.34
 six = 1.10.0
 socketpool = 0.5.3
 z3c.recipe.mkdir = 0.6
-zc.buildout = 2.5.0
+zc.buildout = 2.5.3
 zc.recipe.egg = 2.0.3
 
 # Required by:
-# openprocurement.complaints.queue==0.1
+# openprocurement.complaints.queue==0.6.1
 MySQL-python = 1.2.5
 
 # Required by:
-# openprocurement-client==1.0a3
-gevent = 1.0.2
-
-# Required by:
-# openprocurement-client==1.0a3
-# openprocurement.complaints.queue==0.1
+# openprocurement-client==1.0b3
+# openprocurement.complaints.queue==0.6.1
 iso8601 = 0.1.11
 
 # Required by:
-# openprocurement-client==1.0a3
+# openprocurement-client==1.0b3
 munch = 2.0.4
 
 # Required by:
-# openprocurement.complaints.queue==0.1
-python-dateutil = 2.5.0
+# openprocurement.complaints.queue==0.6.1
+python-dateutil = 2.6.0
 
 # Required by:
-# openprocurement.complaints.queue==0.1
-requests = 2.9.1
-
-# Required by:
-# openprocurement-client==1.0a3
+# openprocurement-client==1.0b3
 restkit = 4.2.2
 
 # Required by:
-# openprocurement-client==1.0a3
+# openprocurement-client==1.0b3
 retrying = 1.3.3
 
 # Required by:
 # mr.developer==1.34
-# openprocurement.complaints.queue==0.1
-setuptools = 20.2.2
+setuptools = 30.2.0
 
 # Required by:
-# openprocurement-client==1.0a3
-# openprocurement.complaints.queue==0.1
-simplejson = 3.8.2
+# openprocurement-client==1.0b3
+# openprocurement.complaints.queue==0.6.1
+simplejson = 3.10.0
