add watchdog option

--- a/templates/complaints.ini
+++ b/templates/complaints.ini
@@ -3,7 +3,7 @@
 workers = 2
 logfile = ${parts.buildout['log-directory']}/complaints.log
 pidfile = ${parts.buildout['run-directory']}/complaints.pid
-sigalrm = 60
+watchdog = 300
 
 [client]
 host_url = https://lb.api-sandbox.openprocurement.org
