update mysql config

--- a/templates/complaints.ini
+++ b/templates/complaints.ini
@@ -27,6 +27,11 @@ user = complaints
 passwd = complaints
 db = complaints
 table = complaints
+charset = utf8
+connect_timeout = 30
+#init_command = ""
+#drop_cache = no
+#keep_alive = yes
 
 [loggers]
 keys = root, openprocurement.complaints.queue
