--- a/templates/complaints.ini
+++ b/templates/complaints.ini
@@ -32,6 +32,7 @@ connect_timeout = 30
 #init_command = ""
 #drop_cache = no
 #keep_alive = yes
+#max_packet = 500000
 
 [loggers]
 keys = root, openprocurement.complaints.queue
