--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -16,7 +16,7 @@ show-picked-versions = true
 
 
 [sources]
-openprocurement.complaints.queue = git https://github.com/imaginal/openprocurement.complaints.queue
+openprocurement.complaints.queue = git https://github.com/imaginal/openprocurement.complaints.queue tag=v0.6
 
 
 [config-from-template]
