--- a/profiles/production.cfg
+++ b/profiles/production.cfg
@@ -1,3 +1,6 @@
 [buildout]
 extends = base.cfg
 
+[sources]
+openprocurement.complaints.queue = git https://github.com/imaginal/openprocurement.complaints.queue tag=v0.6
+
