start test branch

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,4 @@
 [buildout]
-#extends = profiles/development.cfg
-extends = profiles/production.cfg
+extends = profiles/development.cfg
+#extends = profiles/production.cfg
 #extends = profiles/debian.cfg
