--- a/profiles/development.cfg
+++ b/profiles/development.cfg
@@ -1,6 +1,8 @@
 [buildout]
 extends = base.cfg
 
+[sources]
+openprocurement.complaints.queue = git https://github.com/imaginal/openprocurement.complaints.queue branch=test
 
 [search.ini]
 debug = true
