--- a/templates/complaints.ini
+++ b/templates/complaints.ini
@@ -13,6 +13,7 @@ mode = _all_
 limit = 1000
 timeout = 30
 use_cache = yes
+#user_agent = master
 #store_claim = no
 #store_draft = no
 fast_rewind = yes
