--- a/profiles/base.cfg
+++ b/profiles/base.cfg
@@ -10,13 +10,13 @@ log-directory = ${buildout:directory}/var/log
 parts =
     mkdirs
     scripts
-	complaints.ini
-show-picked-versions = true
+    complaints.ini
+#show-picked-versions = true
 #update-versions-file = profiles/versions.cfg
 
 
 [sources]
-openprocurement.complaints.queue = git https://github.com/imaginal/openprocurement.complaints.queue tag=v0.6
+openprocurement.complaints.queue = git https://github.com/imaginal/openprocurement.complaints.queue tag=v0.6.1
 
 
 [config-from-template]
