--- a/profiles/debian.cfg
+++ b/profiles/debian.cfg
@@ -1,5 +1,6 @@
 [buildout]
-extends = base.cfg
+;extends = base.cfg
+extends = production.cfg
 etc-directory = /etc/complaints-queue
 var-directory = ${buildout:directory}/var
 run-directory = /run
